Updated version. I'll begin the logics to the user's register feat.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/Logo-Kenzie-Hub.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Logo-Kenzie-Hub.svg" />
     <meta name="description" content="Trabalho desenvolvido por Alessandro Tanus, como atividade avaliativa do Módulo M3 do curso de programador Full Stack da Kenzie Academy.">
         <meta name="keywords" content="REACT, HTML, CSS, JS">
         <meta name="author" content="Ale Tanus">
